# magi7ichiro-fork

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts
.claude/skills/grilling/: SKILL.md
.github/workflows/: android-sdk.yml  native-parity.yml  release-build.yml  v6-engine-check.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  magi_native.cpp
app/src/main/java/com/magi/app/: KigouFormat.kt  MainActivity.kt
app/src/main/java/com/magi/app/model/: StateParser.kt
app/src/main/java/com/magi/app/ui/: Affordance.kt  ConstraintEditor.kt  CountSettingsScreen.kt  MagiApp.kt  MagiComponents.kt  MagiDashboardCards.kt  MagiScheduleViews.kt  MagiSetupCards.kt  MagiTokens.kt  MagiUiState.kt  MagiViewModel.kt  NeedDayEditor.kt  ShiftColorEditor.kt  SkillGroupEditor.kt  StaffManageCard.kt  StaffRangeEditor.kt  V6RemainingScreens.kt  WishEditor.kt  Ws1Editor.kt
app/src/main/java/com/magi/app/v6/: AdaptiveEliteArchive.kt  AdaptiveHypothesisEpochPolicy.kt  BeamC1PolishV2.kt  C1JointLnsPolish.kt  C1RepairAnalysis.kt  C1TemporalDp.kt  C1TemporalFlowPolish.kt  C1TemporalSwapPolish.kt  CombinatorialRepair.kt  ConstraintMus.kt  DeltaEvaluator.kt  EliteIntegrationPolish.kt  Evaluator.kt  FlexibleDayFlow.kt  GlsPenalty.kt  GreedyMirrorScheduler.kt  Hf63Infeasibility.kt  HypothesisDiversityPolicy.kt  LightMirrorOptimizer.kt  MagiConductor.kt  MirrorCore.kt  (+17 more)
docs/: DESIGN.md  architecture.md  business-logic.md  data-models.md  design.md  magi_design_system.md  overview.md  requirements.md  screen_spec.md  screen_spec_comprehensive.txt  ux_test_checklist.md  v6_engine_native_port.md
tools/: design_lint.py  mock_render_dogfood.py  nsp_bench.py
tools/native/: host_parity_bench.cpp  state_to_flat.py
(+42 files in other folders)
